[project]
name = "aistudent"
version = "0.1.0"
description = ""
authors = [
  {name = "Pierre Dulac", email = "dulacp@google.com"},
  {name = "Mariam Youssef", email = "mariamyoussef@google.com"},
  {name = "François Pérez", email = "fraperez@google.com"},
]
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "streamlit",
  "tenacity",
  "langchain",
  "watchdog",
  "openai",
  "pyyaml",
  "beautifulsoup4",
  "tiktoken",
  "transformers",
  "streamlit-elements",
  "matplotlib",
  "google-auth-oauthlib",
  "google-auth-httplib2",
  "alive-progress",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pip-tools",
  "isort==5.12.0",
  "black==23.1a1",
  "flake8==6.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tools.setuptools]
packages = ["frontend/*", "pages/*"]
