[project]
name = "aistudent"
version = "0.1.0"
description = ""
authors = [
    { name = "Pierre Dulac", email = "dulacp@google.com" },
    { name = "Mariam Youssef", email = "mariamyoussef@google.com" },
    { name = "François Pérez", email = "fraperez@google.com" },
]
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "streamlit",
    "tenacity",
    "langchain",
    "watchdog",
    "openai",
    "pyyaml",
    "beautifulsoup4",
    "tiktoken",
    "streamlit-elements",
    "google-auth-oauthlib",
    "google-auth-httplib2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "isort==5.12.0",
    "black==26.3.1",
    "flake8==6.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
